Port whenify.html and fix layout issues caused by the port.

--- a/src/app.css
+++ b/src/app.css
@@ -38,3 +38,7 @@ footer {
 .body {
     flex: 1;
 }
+
+.content {
+    flex: 1;
+}
