--- a/src/whenify/whenify.css
+++ b/src/whenify/whenify.css
@@ -13,15 +13,15 @@ html, body{
     margin: 0;
 }
 
-main {
-    flex: 1;
+#whenify {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
+    flex: 1;
 }
 
 @media (max-width: 850px) {
-    main {
+    #whenify {
         flex-direction: column;
     }
 }
